fix[backend](socai): generate the modulegroup with new keys if no other exists on db