@@ -11,7 +11,11 @@ import com.park.utmstack.util.CipherUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,7 +36,7 @@ public class UtmModuleConfigValidator {
     public boolean validate(UtmModule module, List<UtmModuleGroupConfiguration> keys, List<UtmModuleGroupConfiguration> dbConfigs) {
         if (keys.isEmpty()) return false;
 
-        List<UtmModuleGroupConfDTO> configDTOs = dbConfigs.stream()
+        List<UtmModuleGroupConfDTO> configDTOs = new ArrayList<>(dbConfigs.stream()
                 .map(dbConf -> {
                     UtmModuleGroupConfiguration override = findInKeys(keys, dbConf.getConfKey());
                     String value;
@@ -45,7 +49,17 @@ public class UtmModuleConfigValidator {
                     }
                     return new UtmModuleGroupConfDTO(dbConf.getConfDataType(),dbConf.getConfKey(), value);
                 })
-                .toList();
+                .collect(Collectors.toList()));
+
+        Set<String> dbKeys = dbConfigs.stream()
+                .map(UtmModuleGroupConfiguration::getConfKey)
+                .collect(Collectors.toCollection(HashSet::new));
+
+        keys.stream()
+                .filter(k -> !dbKeys.contains(k.getConfKey()))
+                .filter(k -> !Constants.MASKED_VALUE.equals(k.getConfValue()))
+                .map(k -> new UtmModuleGroupConfDTO(k.getConfDataType(), k.getConfKey(), k.getConfValue()))
+                .forEach(configDTOs::add);
 
         UtmModuleGroupConfWrapperDTO body = new UtmModuleGroupConfWrapperDTO(configDTOs);
 
